Changes to be committed: 	new file:   .env-non-dev 	modified:   Makefile 	modified:   docker-compose.yaml 	modified:   minatovar_bot/Dockerfile 	new file:   minatovar_bot/alembic.ini 	new file:   minatovar_bot/docker/bot.sh 	new file:   minatovar_bot/migrations/README 	new file:   minatovar_bot/migrations/env.py 	new file:   minatovar_bot/migrations/script.py.mako 	new file:   minatovar_bot/migrations/versions/ff79f045ec0f_init.py 	modified:   minatovar_bot/requirements.txt 	modified:   minatovar_bot/src/config.py 	modified:   minatovar_bot/src/create_bot.py 	modified:   minatovar_bot/src/db/dals.py 	new file:   minatovar_bot/src/db/models.py 	new file:   minatovar_bot/src/db/session.py 	modified:   minatovar_bot/src/handlers/admin.py 	modified:   minatovar_bot/src/handlers/client.py 	modified:   minatovar_bot/src/handlers/messages.py 	new file:   minatovar_bot/src/handlers/orders.py 	modified:   minatovar_bot/src/keyboards/__init__.py 	modified:   minatovar_bot/src/keyboards/kb_admin.py 	modified:   minatovar_bot/src/keyboards/kb_client.py 	new file:   minatovar_bot/src/keyboards/kb_order.py 	modified:   minatovar_bot/src/main.py 	new file:   minatovar_bot/src/middlewares/middleware.py 	new file:   minatovar_bot/src/utils/orders.py 	new file:   minatovar_bot/src/utils/referral.py 	new file:   minatovar_bot/src/wait_postgres.py 	new file:   postgres/pg_hba.conf 	new file:   postgres/postgresql.conf

--- a/minatovar_bot/Dockerfile
+++ b/minatovar_bot/Dockerfile
@@ -6,9 +6,12 @@ WORKDIR /app
 COPY requirements.txt .
 
 # Устанавливаем зависимости
+COPY requirements.txt .
+
+# Устанавливаем зависимости
+RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
-# Копируем исходный код бота в контейнер
 COPY . .
-# Команда для запуска бота
-CMD ["python", "src/main.py"]
+
+RUN chmod a+x docker/*.sh
