--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,21 @@
 services:
   bot:
-    container_name: minatovar_bot
+    container_name: bot
     build: ./minatovar_bot
     restart: always
     volumes:
       - ./data:/data
     depends_on:
       - redis
+      - postgres
     env_file:
-      - .env
+      - .env-non-dev
+    command: ["/app/docker/bot.sh"]
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: "0.50"
 
   redis:
     image: redis:latest
@@ -16,7 +23,7 @@ services:
     ports:
       - "6379:6379"
     volumes:
-      - ./redis_data:/data
+      - redis_data:/data
       - ./redis/redis.conf:/usr/local/etc/redis/redis.conf
       - ./redis/users.acl:/usr/local/etc/redis/users.acl
     expose:
@@ -31,7 +38,32 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+  postgres:
+    container_name: postgres
+    image: postgres:17
+    volumes:
+      - db_data:/var/lib/postgresql/data
+      - ./postgres/postgresql.conf:/etc/postgresql/postgresql.conf
+      - ./postgres/pg_hba.conf:/var/lib/postgresql/data/pg_hba.conf
+    environment:
+      - PGDATA=/var/lib/postgresql/data/pgdata
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=2007Fj2007
+      - POSTGRES_HOST_AUTH_METHOD=md5
+      - POSTGRES_DB=min_db
+    command: postgres -c config_file=/etc/postgresql/postgresql.conf
 
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d min_db"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+    ports:
+      - "5431:5432"
+    expose:
+      - 5431
 
 volumes:
   redis_data:
+  db_data:
